third_party/move/move-compiler/tests/move_check/verification/cross_module_invalid.exp
error[E03004]: unbound type
   ┌─ tests/move_check/verification/cross_module_invalid.move:22:23
   │
22 │     public fun bad(): Foo {
   │                       ^^^ Unbound type 'Foo' in current scope

error[E03002]: unbound module
   ┌─ tests/move_check/verification/cross_module_invalid.move:23:9
   │
23 │         A::build_foo()
   │         ^ Unbound module alias 'A'

